[lworld] VerifyError in hotspot/jtreg/runtime/classFileParserBug/NameAndTypeSig.java

XMLWordPrintable

      java.lang.VerifyError: Return type must be void in <init> method
      Exception Details:
        Location:
          nonVoidInitSigCFE.<init>()V @1: invokespecial
        Reason:
          Error exists in the bytecode
        Bytecode:
          0000000: 2ab7 0001 b1

      at java.base/java.lang.Class.forName0(Native Method)
      at java.base/java.lang.Class.forName(Class.java:380)
      at NameAndTypeSig.main(NameAndTypeSig.java:47)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:569)
      at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
      at java.base/java.lang.Thread.run(Thread.java:833)

      Maybe be related to merge with JDK-8268720

            Assignee:
            Harold Seigel (Inactive)
            Reporter:
            David Simms
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: